--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,3 +66,26 @@ margin: 10px;
   margin: 10px;
 }
 
+.disc-container{
+  display: flex;
+  flex-flow: column wrap;
+  background-color: grey;
+  padding: 5px;
+  margin: 10px;
+}
+
+.disc-img{
+  width: 50%;
+}
+
+.discs-display{
+    background-color: #f1f1f1;
+    overflow-x: scroll;
+    margin: 20px;
+    padding: 20px;
+    height: 600px;
+}
+
+.disc-posts{
+  width: 300px;
+}
