--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,19 +66,11 @@ margin: 10px;
   margin: 10px;
 }
 
-.disc-container{
-  display: flex;
-  flex-flow: column wrap;
-  background-color: grey;
-  padding: 5px;
-  margin: 10px;
-}
-
 .disc-img{
   width: 50%;
 }
 
-.discs-display{
+.discs-display-home{
     background-color: #f1f1f1;
     overflow-x: scroll;
     margin: 20px;
@@ -86,6 +78,34 @@ margin: 10px;
     height: 600px;
 }
 
+.discs-display-view{
+  display:flex;
+  flex-flow: row wrap;
+  background-color: #f1f1f1;
+  overflow-x: scroll;
+  margin: 20px;
+  padding: 20px;
+  height: 600px;
+  justify-content:space-between;
+}
+
 .disc-posts{
   width: 300px;
+}
+
+.disc-container-home{
+  display: flex;
+  flex-flow: column wrap;
+  background-color: grey;
+  padding: 5px;
+  margin: 10px;
+}
+
+.disc-container-view{
+  display: flex;
+  flex-flow: column wrap;
+  background-color: grey;
+  padding: 5px;
+  margin: 10px;
+  width: 25%;
 }
