--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,6 +43,12 @@
   flex-flow: row nowrap;
   justify-content: left;
 }
+.header-logged{
+  text-decoration: none;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
 
 .header-link{
   text-decoration: none;
@@ -153,4 +159,15 @@ margin: 10px;
   border-radius:50%;
   width:50px;
   height:50px;
+}
+
+.account-pic{
+  width:75px;
+  border-radius:50%
+}
+
+.post-pic{
+  width:25px;
+  height:25px;
+  border-radius:50%
 }
